attached_assets/Pasted--INFO-Next-scheduled-run-Checks-for-transactions-older-than-24-hours-Unified-Webhook-Receive-1756402561955_1756402561958.txt
[INFO] Next scheduled run: Checks for transactions older than 24 hours
🔔 [Unified Webhook] Received Midtrans notification
📋 [Unified Webhook] Content-Type: application/json
🔔 [Unified Webhook] Received Midtrans notification
📋 [Unified Webhook] Content-Type: application/json
💥 [Unified Webhook] Error: SyntaxError: Unexpected end of JSON input
    at JSON.parse (<anonymous>)
    at POST (app/api/midtrans/webhook/route.ts:21:28)
  19 |     if (contentType.includes('application/json')) {
  20 |       // Parse JSON data
> 21 |       body = await request.json()
     |                            ^
  22 |       console.log('📦 [Unified Webhook] Parsed as JSON')
  23 |     } else if (contentType.includes('application/x-www-form-urlencoded')) {
  24 |       // Parse form-encoded data
💥 [Unified Webhook] Error details: {
  message: 'Unexpected end of JSON input',
  stack: 'SyntaxError: Unexpected end of JSON input\n' +
    '    at JSON.parse (<anonymous>)\n' +
    '    at parseJSONFromBytes (node:internal/deps/undici/undici:5738:19)\n' +
    '    at successSteps (node:internal/deps/undici/undici:5719:27)\n' +
    '    at consumeBody (node:internal/deps/undici/undici:5725:9)\n' +
    '    at NextRequest.json (node:internal/deps/undici/undici:5665:18)\n' +
    '    at POST (webpack-internal:///(rsc)/./app/api/midtrans/webhook/route.ts:27:34)\n' +
    '    at AsyncLocalStorage.run (node:async_hooks:335:14)\n' +
    '    at AppRouteRouteModule.do'
}
💥 [Unified Webhook] Error: SyntaxError: Unexpected end of JSON input
    at JSON.parse (<anonymous>)
    at POST (app/api/midtrans/webhook/route.ts:21:28)
  19 |     if (contentType.includes('application/json')) {
  20 |       // Parse JSON data
> 21 |       body = await request.json()
     |                            ^
  22 |       console.log('📦 [Unified Webhook] Parsed as JSON')
  23 |     } else if (contentType.includes('application/x-www-form-urlencoded')) {
  24 |       // Parse form-encoded data
💥 [Unified Webhook] Error details: {
  message: 'Unexpected end of JSON input',
  stack: 'SyntaxError: Unexpected end of JSON input\n' +
    '    at JSON.parse (<anonymous>)\n' +
    '    at parseJSONFromBytes (node:internal/deps/undici/undici:5738:19)\n' +
    '    at successSteps (node:internal/deps/undici/undici:5719:27)\n' +
    '    at consumeBody (node:internal/deps/undici/undici:5725:9)\n' +
    '    at NextRequest.json (node:internal/deps/undici/undici:5665:18)\n' +
    '    at POST (webpack-internal:///(rsc)/./app/api/midtrans/webhook/route.ts:27:34)\n' +
    '    at AsyncLocalStorage.run (node:async_hooks:335:14)\n' +
    '    at AppRouteRouteModule.do'
}
✅ SMTP transporter initialized and verified successfully